@@ -310,6 +310,12 @@ Skills:
             Wolf_Amount: 1
             Ocelot_Amount: 1
             Horse_Amount: 1
+
+            # Summon life length determines how long a summoned pet lives
+            Wolf_Length: 240
+            Ocelot_Length: 240
+            Horse_Length: 240
+
     Unarmed:
         Enabled_For_PVP: true
         Enabled_For_PVE: true
@@ -405,6 +411,7 @@ Particles:
     Dodge: true
     Bleed: true
     Greater_Impact: true
+    Call_of_the_Wild: true
 
     # These settings determine if fireworks should get launched when a player levels-up,
     # this will happen by default for every 100 levels.
